--- a/.github/workflows/deploy-terraform-database.yml
+++ b/.github/workflows/deploy-terraform-database.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-      - feature/pipeline
 
   pull_request:
     branches:
@@ -48,8 +47,8 @@ jobs:
           TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
           TF_VAR_db_name: "soatdb"
           TF_VAR_username: "eduardo"
-          TF_VAR_vpc_id: "vpc-03f48d83e7a4bde63"
-          TF_VAR_subnet_ids: '["subnet-06d4a0b2a86c5f2ec", "subnet-00adfcd608ec14bfd"]'
+          TF_VAR_vpc_id: "vpc-03f48d83e7a4bde63" # TODO: Remover e deixar dinamico
+          TF_VAR_subnet_ids: '["subnet-06d4a0b2a86c5f2ec", "subnet-00adfcd608ec14bfd"]' # TODO: Remover e deixar dinamico
 
       - name: 5. Salvar Plan File
         uses: actions/upload-artifact@v4
@@ -63,7 +62,7 @@ jobs:
 
   apply:
     name: "Terraform Apply"
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/feature/pipeline'
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: [plan]
 
